# flatpaksync

./: README.md  com.github.be2c38e286fff7df25d17e21294604a8.flatpaksync.json  meson.build
data/: com.github.be2c38e286fff7df25d17e21294604a8.flatpaksync.appdata.xml.in  com.github.be2c38e286fff7df25d17e21294604a8.flatpaksync.desktop.in  com.github.be2c38e286fff7df25d17e21294604a8.flatpaksync.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: about.py  about.ui  flatpaksync.gresource.xml  flatpaksync.in  main.py  meson.build  window.py  window.ui
src/flatpak/: appaction.py  flatpak.py  flatpakcmd.py  parsepermission.py  permissionlist.py  repoaction.py
